Intro page 2 Finished the ui for mobiles for page 2

--- a/src/Pages/Intro/Components/Button/Button.module.css
+++ b/src/Pages/Intro/Components/Button/Button.module.css
@@ -1,10 +1,16 @@
 .text{
-
-    border: 2px solid #acacff;
-    background-color: #acacff;
-    padding: 1vw 10vw;
     font-size: 1.2rem;
     color: #F8F8FF;
     font-weight: 200;
     font-weight: bold;
+}
+
+.container {
+    background-color: red;
+    width: 35%;
+    border: 2px solid #acacff;
+    background-color: #acacff;
+    padding: 1vw 0;
+    text-align: center;
+    box-shadow: 1px 1px 2px 1px #7575c9;
 }
