Dashboard design Started work on the dashboard for mobile screens Implemented logic to dynamically populate the donut chart depending on how many books exist in the collection Added a util colours file

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 body{
   height: 100%;
+  background-color: #F8F8FF;
 }
 html{
   height: 100%;
+  background-color: #F8F8FF;
 }
 #root{
   height: 100%;
