Revamp of the colour scheme and implementing the correct percentage on dashboard Added 2 new colours, blue and dark blue Changed purples to blues across the whole app including icons

--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,5 @@ html{
 .App{
   height: 100%;
   background-color: #F8F8FF;
-  font-family: 'Comic Neue', cursive;
+  font-family: 'Exo 2', sans-serif
 }
