Media queries Added media queries for all devices

--- a/src/Pages/Dashboard/Components/Small_donut/Small_donut.module.css
+++ b/src/Pages/Dashboard/Components/Small_donut/Small_donut.module.css
@@ -49,6 +49,7 @@ svg {
     border-radius: 500px;
     display: flex;
     justify-content: center;
+    margin-left: 5px;
 }
 
 @keyframes fadeIn {
