--- a/src/Pages/Dashboard/Components/Condition_card/Condition_card.module.css
+++ b/src/Pages/Dashboard/Components/Condition_card/Condition_card.module.css
@@ -27,3 +27,19 @@
     margin-bottom: 2vh;
 
 }
+
+@media (orientation:landscape){
+
+    .container{
+        height: 20%;
+        width: 35%;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .title, .number{
+        font-size: 30px;
+        margin: 0;
+
+    }
+}
