--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -15,9 +15,141 @@
     bottom: 23%;
 }
 
-/* long portrait phone */
+/* landscape */
 
-@media (min-device-height: 600px) and (max-device-width:500px) {
+@media (orientation:landscape){
 
+    .card_container{
+        height: 60%;
+        width: 50%;
+        position: absolute;
+        left: 55%;
+        top: 0;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-top: 7%;
+    }
+
+    .container{
+        margin-top: -4vh;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .card_container{margin-top: 3%;}
+        .container{margin-top: 3vh;}
+      }
+}
+
+/* long landscape mobile */
+@media (orientation:landscape) and (min-width:700px){
+
+    .container{
+        margin-top: -4vh;
+    }
+
+    .card_container{
+        margin-top: 7%;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .card_container{margin-top: 4%;}
+        .container{margin-top: 3vh;}
+      }
+}
+
+/* Small portrait tablet */
+
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
+
+    .container{
+        background-color: red;
+    }
+
+}
+
+/* Small landscape tablet */
+
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px){
+
+    .container{
+        background-color: red;
+    }
     
 }
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px){
+
+    .container{
+        background-color: green;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            background-color: purple;
+        }
+      }
+
+}
+
+/* medium landscape tablet */
+
+@media (min-height:500px) and (min-width: 1000px){
+
+    .container{
+        background-color: green;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            background-color: purple;
+        }
+      }
+
+}
+
+/* large portrait tablet */
+@media (min-height:1200px) and (min-width: 1000px){
+
+    .container{
+        background-color: blue;
+    }
+
+
+}
+
+/* large landscape tablet */
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px){
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            background-color: blue;
+        }
+      }
+   
+
+
+
+}
+
+/*Standard desktop */
+@media (min-width: 1001px) {
+
+    @supports not (-webkit-touch-callout: none) {
+        .container{
+            background-color: orange;
+        }
+      }
+}
+
+/*large desktop */
+@media (min-width: 1500px) {
+
+    @supports not (-webkit-touch-callout: none) {
+        .container{
+            background-color: gray;
+        }
+      }
+}
+
