--- a/src/Shared Components/Options_bar/Options_bar.module.css
+++ b/src/Shared Components/Options_bar/Options_bar.module.css
@@ -16,3 +16,21 @@
         margin-bottom: 3vh;
     }
 }
+
+/*Standard desktop */
+
+@media (min-width: 1200px) {
+
+.container{
+    width: 85%;
+}
+}
+
+/*large desktop */
+
+@media (min-width: 1500px) {
+
+    .container{
+        width: 70%;
+    }
+}
