--- a/src/Pages/Dashboard/Components/Condition_card/Condition_card.module.css
+++ b/src/Pages/Dashboard/Components/Condition_card/Condition_card.module.css
@@ -1,7 +1,6 @@
 .container {
     width: 26%;
     border-radius: 5px;
-
     box-shadow: 2px 2px 3px 2px #d3d3d3;
     display: flex;
     flex-direction: column;
@@ -11,35 +10,117 @@
     color: white;
 }
 
-.title{
+.title {
     font-size: 1.2rem;
     margin-top: 2vh;
     font-family: 'Exo 2', sans-serif;
     color: white;
- 
 }
 
-.number{
-
+.number {
     font-size: 50px;
     margin-top: 1vh;
     color: white;
     margin-bottom: 2vh;
-
 }
 
-@media (orientation:landscape){
-
-    .container{
+@media (orientation:landscape) {
+    .container {
         height: 20%;
         width: 35%;
         flex-direction: row;
         justify-content: space-around;
     }
-
-    .title, .number{
+    .title, .number {
         font-size: 30px;
         margin: 0;
+    }
+}
 
+/* Small portrait tablet */
+
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+    .title {
+        font-size: 1.4rem;
+    }
+}
+
+/* Small landscape tablet */
+
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {}
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px) {
+    .title {
+        font-size: 1.4rem;
+    }
+    @supports (-webkit-touch-callout: none) {
+        .title {
+            font-size: 1.5rem;
+        }
+    }
+}
+
+/* medium landscape tablet */
+
+@media (min-height:500px) and (min-width: 1000px) {
+    .container {
+        width: 30%;
+    }
+    @supports (-webkit-touch-callout: none) {
+        .container {
+            width: 20%;
+            height: 35%;
+            flex-direction: column;
+        }
+        .title {
+            font-size: 1.5rem;
+        }
+        .number {
+            font-size: 3.5rem;
+        }
+    }
+}
+
+/* large portrait tablet */
+
+@media (min-height:1200px) and (min-width: 1000px) {
+    .container {
+        width: 26%;
+    }
+}
+
+/*Standard desktop */
+
+@media (min-width: 1200px) {
+
+    .container {
+        width: 18%;
+        height: 15vh;
+        flex-direction: column;
+    }
+    .title {
+        font-size: 1.2rem;
+    }
+    .number {
+        font-size: 3rem;
+    }
+}
+
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
+    @supports (-webkit-touch-callout: none) {
+
+        .container {
+            width: 20%;
+            height: 18vh;
+            flex-direction: column;
+        }
+        .title {
+            font-size: 2rem;
+        }
+        .number {
+            font-size: 5rem;
+        }
     }
 }
