--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -1,4 +1,4 @@
-.container{
+.container {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -6,7 +6,7 @@
     position: relative;
 }
 
-.card_container{
+.card_container {
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -15,11 +15,11 @@
     bottom: 23%;
 }
 
+
 /* landscape */
 
-@media (orientation:landscape){
-
-    .card_container{
+@media (orientation:landscape) {
+    .card_container {
         height: 60%;
         width: 50%;
         position: absolute;
@@ -29,127 +29,133 @@
         justify-content: space-evenly;
         margin-top: 7%;
     }
-
-    .container{
+    .container {
         margin-top: -4vh;
     }
-
     @supports (-webkit-touch-callout: none) {
-        .card_container{margin-top: 3%;}
-        .container{margin-top: 3vh;}
-      }
+        .card_container {
+            margin-top: 3%;
+        }
+        .container {
+            margin-top: 3vh;
+        }
+    }
 }
 
 /* long landscape mobile */
-@media (orientation:landscape) and (min-width:700px){
 
-    .container{
-        margin-top: -4vh;
+@media (orientation:landscape) and (min-width:700px) {
+    .container {
+        margin-top: 2%;
     }
-
-    .card_container{
-        margin-top: 7%;
+    .card_container {
+        margin-top: 5%;
     }
-
     @supports (-webkit-touch-callout: none) {
-        .card_container{margin-top: 4%;}
-        .container{margin-top: 3vh;}
-      }
+        .card_container {
+            margin-top: 4%;
+        }
+        .container {
+            margin-top: 3vh;
+        }
+    }
 }
 
 /* Small portrait tablet */
 
-@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
-
-    .container{
-        background-color: red;
-    }
-
-}
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {}
 
 /* Small landscape tablet */
 
-@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px){
-
-    .container{
-        background-color: red;
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {
+    .container {
+        margin-top: 0%;
     }
-    
 }
 
 /* medium portrait tablet */
 
-@media (min-height:800px) and (min-width: 701px){
+@media (min-height:800px) and (min-width: 701px) {
 
-    .container{
-        background-color: green;
-    }
 
     @supports (-webkit-touch-callout: none) {
-        .container{
-            background-color: purple;
-        }
-      }
 
+    }
 }
 
 /* medium landscape tablet */
 
-@media (min-height:500px) and (min-width: 1000px){
-
-    .container{
-        background-color: green;
+@media (min-height:500px) and (min-width: 1000px) {
+    .container {
+        margin-top: 5%;
     }
-
+    .card_container {
+        margin-top: 2.5%;
+    }
     @supports (-webkit-touch-callout: none) {
-        .container{
-            background-color: purple;
-        }
-      }
 
+        .container{
+            position: relative;
+        }
+        .card_container{
+            flex-direction: row;
+            width: 100%;
+            bottom: 50vh;
+            position: relative;
+            left: 0;
+            margin-bottom: 14vh;
+        }
+    
+    }
 }
 
 /* large portrait tablet */
-@media (min-height:1200px) and (min-width: 1000px){
 
-    .container{
-        background-color: blue;
+@media (min-height:1200px) and (min-width: 1000px) {
+
+    .card_container{
+        top: 25vh;
+        left: 0;
+        margin: 0;
+        padding: 0;
+        position: relative;
     }
-
 
 }
 
 /* large landscape tablet */
-@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px){
 
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
     @supports (-webkit-touch-callout: none) {
-        .container{
-            background-color: blue;
-        }
+      .card_container{
+          margin-bottom: 0;
+          top: 5vh;
       }
-   
-
-
-
-}
+    }
+  }
 
 /*Standard desktop */
-@media (min-width: 1001px) {
 
-    @supports not (-webkit-touch-callout: none) {
-        .container{
-            background-color: orange;
-        }
-      }
+@media (min-width: 1200px) {
+
+    body{
+        overflow: hidden;
+    }
+
+    .card_container{
+        flex-direction: row;
+        width:85%;
+        left: 0%;
+        position: relative;
+        margin-bottom: 12%;
+    }
 }
 
 /*large desktop */
+
 @media (min-width: 1500px) {
 
-    @supports not (-webkit-touch-callout: none) {
-        .container{
-            background-color: gray;
-        }
-      }
+    .card_container{
+        width: 70%;
+    }
 }
-
