--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,6 @@ html{
   background-color: #F8F8FF;
   font-family: 'Exo 2', sans-serif
 }
+
+input[type='text'],input[type='number'],textarea {font-size:16px;}
+body{ -webkit-text-size-adjust:none;}
