--- a/src/Shared Components/Options_bar/Options_bar.module.css
+++ b/src/Shared Components/Options_bar/Options_bar.module.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    position: fixed;
+    position: absolute;
     bottom: 2vh;
 }
 
@@ -22,7 +22,7 @@
 @media (min-width: 1200px) {
 
 .container{
-    width: 85%;
+    width: 75%;
 }
 }
 
@@ -31,6 +31,6 @@
 @media (min-width: 1500px) {
 
     .container{
-        width: 70%;
+        width: 60%;
     }
 }
