--- a/src/Shared Components/Form/Components/Condition_circle/Condition_circle.module.css
+++ b/src/Shared Components/Form/Components/Condition_circle/Condition_circle.module.css
@@ -17,5 +17,30 @@
     justify-content: center;
     align-items: center;
     font-weight: 900;
+    position: absolute;
+
+}
+
+.animation_container {
+
+    height: 17vw;
+    width: 17vw;
+    border-radius: 500px;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    animation: explode 1s;
+    position: absolute;
+
+}
+
+@keyframes explode {
+
+    0%{
+        transform: scale(0.1);
+    }
+    100%{
+        transform: scale(1);
+    }
 
 }
