--- a/src/Pages/Add_book/Add_book.module.css
+++ b/src/Pages/Add_book/Add_book.module.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: hidden;
 
 }
 
@@ -16,10 +17,108 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .image{
     width: 100vw;
     max-height: 100%;
 }
+
+
+/*//!  Landscape display none queries */
+
+@media (orientation:landscape) and (max-width:1100px) and (min-aspect-ratio: 13/9){
+
+    .image_container, .image{
+        display: none;
+    }
+    
+    }
+
+/* Small landscape tablet */
+
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px){
+
+    .container{
+        
+    }
+    
+}
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px){
+
+    .container{
+        background-color: green;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            background-color: purple;
+        }
+      }
+
+}
+
+/* medium landscape tablet */
+
+@media (min-height:500px) and (min-width: 1000px){
+
+    .container{
+        background-color: green;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            background-color: purple;
+        }
+      }
+
+}
+
+/* large portrait tablet */
+@media (min-height:1200px) and (min-width: 1000px){
+
+    .container{
+        background-color: blue;
+    }
+
+
+}
+
+/* large landscape tablet */
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px){
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            background-color: blue;
+        }
+      }
+   
+
+
+
+}
+
+/*Standard desktop */
+@media (min-width: 1001px) {
+
+    @supports not (-webkit-touch-callout: none) {
+        .container{
+            background-color: orange;
+        }
+      }
+}
+
+/*large desktop */
+@media (min-width: 1500px) {
+
+    @supports not (-webkit-touch-callout: none) {
+        .container{
+            background-color: gray;
+        }
+      }
+}
+
