--- a/src/Shared Components/Form/Components/Button/Button.module.css
+++ b/src/Shared Components/Form/Components/Button/Button.module.css
@@ -8,3 +8,13 @@
     font-size: 1.4rem;
     font-weight: 500;
 }
+
+/* Small portrait tablet */
+
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
+
+    .container{
+        width: 30vw;
+    }
+
+}
