--- a/src/Shared Components/Form/Form.module.css
+++ b/src/Shared Components/Form/Form.module.css
@@ -1,7 +1,3 @@
-.container{
-    height: 100%;
-    width: 100%;
-}
 
 .title_container{
     width: 100vw;
@@ -9,7 +5,8 @@
     justify-content: center;
     align-items: center;
     font-size: 10vh;
-    margin-top: 0%;
+    margin-top: 5%;
+    height: 20%;
     font-family: 'EB Garamond', serif;
 }
 
@@ -21,7 +18,6 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
-    margin-top: 3%;
 
 }
 
@@ -46,5 +42,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 10%;
+}
+
+.landscape_prompt{
+
+    display: none;
+}
+
+/*//!  Landscape display none queries */
+
+@media (orientation:landscape) and (max-width:1100px) and (min-aspect-ratio: 13/9){
+
+    .form{
+      display: none;
+    }
+    
+    .landscape_prompt{
+      display: block;
+    }
+    
+    }
+    
+
+/* Small portrait tablet */
+
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
+
+ .circle_title{
+     font-size: 18px;
+ }
+
 }
