--- a/src/Shared Components/Form/Components/Condition_circle/Condition_circle.module.css
+++ b/src/Shared Components/Form/Components/Condition_circle/Condition_circle.module.css
@@ -50,14 +50,38 @@
 @media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
 
     .container{
-        width: 15vw;
-        height: 15vw;
+        max-width: 100px;
+        max-height: 100px;
     }
 
     .inner_container,.animation_container{
 
-        width: 12vw;
-        height: 12vw;
+        max-width: 80px;
+        max-height: 80px;
     }
+
+}
+
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px){
+
+    .container{
+        max-width: 100px;
+        max-height: 100px;
+    }
+
+    .inner_container,.animation_container{
+
+        max-width: 80px;
+        max-height: 80px;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            background-color: purple;
+        }
+      }
 
 }
