--- a/src/Shared Components/Form/Components/Input_box/Input_box.module.css
+++ b/src/Shared Components/Form/Components/Input_box/Input_box.module.css
@@ -1,18 +1,18 @@
-.container{
+.container {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding-left: 20%;
-    margin-top: 5vh;
+    margin-top: 2vh;
 }
 
-.title_container{
+.title_container {
     margin-bottom: 1vh;
     margin-left: 0.5vw;
 }
 
-.input_box{
+.input_box {
     width: 80%;
     height: 35px;
     border-radius: 3px;
@@ -20,10 +20,40 @@
 
 /* Small portrait tablet */
 
-@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
-
-    .title_container{
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+    .title_container {
         font-size: 18px;
     }
-   
-   }
+}
+
+@media (min-height:800px) and (min-width: 701px) {
+    .container {
+        width: 80%;
+    }
+    @supports (-webkit-touch-callout: none) {}
+}
+
+/* large portrait tablet */
+@media (min-height:1200px) and (min-width: 1000px){
+
+    .container{
+
+        width: 65%;
+        margin-right: 5%;
+
+    }
+
+}
+
+/* large landscape tablet */
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px){
+
+    @supports (-webkit-touch-callout: none) {
+        .container{
+
+            width: 40%;
+            margin-right: 12%;
+        }
+      }
+
+}
