--- a/src/Shared Components/Form/Form.module.css
+++ b/src/Shared Components/Form/Form.module.css
@@ -1,5 +1,4 @@
-
-.title_container{
+.title_container {
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -11,33 +10,29 @@
 }
 
 .input_container {
-    
     height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100vw;
-
 }
 
-.circle_title{
-
+.circle_title {
     width: 80%;
     margin-bottom: 1vh;
     margin-left: 0.5vw;
     margin-top: 3%;
     margin-bottom: 3%;
-
 }
 
-.circle_container{
+.circle_container {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
 }
 
-.button_container{
+.button_container {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -45,32 +40,91 @@
     margin-top: 10%;
 }
 
-.landscape_prompt{
-
+.landscape_prompt {
     display: none;
 }
 
 /*//!  Landscape display none queries */
 
-@media (orientation:landscape) and (max-width:1100px) and (min-aspect-ratio: 13/9){
+@media (orientation:landscape) and (max-width:1150px) and (min-aspect-ratio: 13/9) {
+    .form {
+        display: none;
+    }
+    .landscape_prompt {
+        display: block;
+    }
+}
 
-    .form{
-      display: none;
+@media (orientation:landscape) and (min-aspect-ratio: 16/10) and (max-width:1150px) {
+    .form {
+        display: none;
     }
-    
-    .landscape_prompt{
-      display: block;
+    .landscape_prompt {
+        display: block;
     }
-    
-    }
-    
+}
 
 /* Small portrait tablet */
 
-@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+    .circle_title {
+        font-size: 18px;
+    }
+}
 
- .circle_title{
-     font-size: 18px;
- }
+/* medium portrait tablet */
 
+@media (min-height:800px) and (min-width: 701px) {
+    .form {
+        margin-top: 10%;
+    }
+    .title_container {
+        font-size: 80px;
+    }
+    .circle_container {
+        width: 80%;
+    }
+    .circle_title {
+        margin-left: 20%;
+    }
+    @supports (-webkit-touch-callout: none) {}
+}
+
+/* large portrait tablet */
+
+@media (min-height:1200px) and (min-width: 1000px) {
+    .circle_container {
+        width: 60%;
+    }
+    .circle_title {
+        margin-left: 30%;
+    }
+}
+
+/* large landscape tablet */
+
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
+
+    
+    @supports (-webkit-touch-callout: none) {
+
+        .form{
+            margin-top: 0;
+        }
+
+        .circle_container{
+            width: 40%;
+        }
+
+        .circle_title{
+            margin-left: 49%;
+            margin-bottom: 1%;
+        }
+
+        .button_container{
+            top: -3vh;
+            position: relative;
+        }
+        
+    }
 }
