--- a/src/Shared Components/Options_bar/Option/Option.module.css
+++ b/src/Shared Components/Options_bar/Option/Option.module.css
@@ -3,3 +3,32 @@
     width: 50px;
     margin-bottom: 10px;
 }
+
+/* large portrait tablet */
+@media (orientation:portrait) and (min-height:1200px) and (min-width: 1000px){
+
+    @supports (-webkit-touch-callout: none) {
+
+        .icon{
+            height: 75px;
+            width: 75px;
+            margin-bottom: 30px;
+        }
+        
+    }
+
+}
+
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
+
+    
+    @supports (-webkit-touch-callout: none) {
+
+        .icon{
+            height: 75px;
+            width: 75px;
+            margin-bottom: 10px;
+        }
+        
+    }
+}
