--- a/src/Shared Components/Form/Components/Button/Button.module.css
+++ b/src/Shared Components/Form/Components/Button/Button.module.css
@@ -31,13 +31,16 @@
 
 }
 
+
+
 /* large landscape tablet */
 @media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px){
 
     @supports (-webkit-touch-callout: none) {
         .container{
 
-            width: 20%;
+            width: 15%;
+            margin-top: -3.5%;
 
         }
       }
