--- a/src/Shared Components/Form/Components/Condition_circle/Condition_circle.module.css
+++ b/src/Shared Components/Form/Components/Condition_circle/Condition_circle.module.css
@@ -79,9 +79,42 @@
     }
 
     @supports (-webkit-touch-callout: none) {
-        .container{
-            background-color: purple;
-        }
+
       }
 
 }
+
+@media (min-width: 1200px) {
+
+    @supports  not (-webkit-touch-callout: none) {
+    .container, .animation_container{
+        max-width: 70px;
+        max-height: 70px;
+    }
+
+    
+    .inner_container{
+
+        max-width: 60px;
+        max-height: 60px;
+    }
+
+    .container:hover, .inner_container:hover, .animation_container:hover{
+
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+
+
+
+}
+    
+    
+    }
+    
+    /*large desktop */
+    
+    @media (min-width: 1500px) {
+    
+     
+    }
