--- a/src/Shared Components/Form/Components/Input_box/Input_box.module.css
+++ b/src/Shared Components/Form/Components/Input_box/Input_box.module.css
@@ -34,26 +34,48 @@
 }
 
 /* large portrait tablet */
-@media (min-height:1200px) and (min-width: 1000px){
 
-    .container{
-
+@media (min-height:1200px) and (min-width: 1000px) {
+    .container {
         width: 65%;
         margin-right: 5%;
-
     }
-
 }
 
+
 /* large landscape tablet */
-@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px){
 
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
     @supports (-webkit-touch-callout: none) {
-        .container{
-
+        .container {
             width: 40%;
             margin-right: 12%;
         }
-      }
+    }
+}
 
+@media (min-width: 1200px) {
+
+    @supports  not (-webkit-touch-callout: none) {
+
+        .container{
+            margin: 0;
+            padding: 0;
+            margin-left: 20%;
+            width: 100%;
+        }
+
+        .input_box{
+
+            padding: 0;
+            margin: 0;
+        }
+
+        .title_container{
+            margin: 0;
+            padding: 0;
+            margin-bottom: 10px;
+            font-size: 20px;
+        }
+}
 }
