--- a/src/Shared Components/Alert/Alert.module.css
+++ b/src/Shared Components/Alert/Alert.module.css
@@ -1,5 +1,4 @@
 .container{
-    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,6 +40,7 @@
     justify-content: center;
     align-items: center;
     padding: 5px;
+    background-color:white
 }
 
 
@@ -70,3 +70,14 @@
         margin-left: 200vw;
     }
 }
+
+/*Standard desktop */
+
+@media (min-width: 1200px) {
+
+    .container{
+        left: 65vw;
+        bottom: 45vh;
+    }
+    
+    }
