--- a/src/Shared Components/Alert/Alert.module.css
+++ b/src/Shared Components/Alert/Alert.module.css
@@ -4,24 +4,24 @@
     align-items: center;
     justify-content: center;
     position: fixed;
-    bottom: 15vh;
+    bottom: 20vh;
     animation: explode 5s forwards;
     transform: scale(0.1);
  
 }
 
 .inner_container{
-    height: 150px;
-    width: 150px;
+    height: 50px;
+    width: 300px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    box-shadow: 1px 1px 2px 1px grey;
+    box-shadow: 2px 2px 6px 2px rgba(128, 128, 128, 0.308);
 }
 
 .icon_container{
-    height: 45%;
-    width: 100%;
+    height: 100%;
+    width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,12 +35,14 @@
 .message_container{
 
     text-align: center;
-    height: 65%;
+    height: 100%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
-    background-color:white
+    background-color: white;
+
+
 }
 
 
