--- a/src/Pages/Form_wrapper/Components/Search_result/Components/Book_image/Book_image.module.css
+++ b/src/Pages/Form_wrapper/Components/Search_result/Components/Book_image/Book_image.module.css
@@ -1,13 +1,15 @@
 .container{
-    border:1.5px dashed grey;
+
     width: 225px;
-    height: 180px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-top: 5px;
+    margin-top: 20px;
+    background-color: #f8f8f8;
+    border: 0.5px solid rgba(0, 0, 0, 0.192);
 }
 
 .icon_container{
@@ -23,7 +25,7 @@
     width: 65px;
     height: 65px;
     margin-left: 7px;
-    margin-top: -10px;
+    margin-top: -25px;
 }
 
 .choose_file_container{
@@ -32,10 +34,11 @@
     position: absolute;
 }
 
-.choose_file{
+.chosen_photo_container{
     position: absolute;
-    top: 65%;
-    left: 28%;    
+    top: 64%;
+    width: 100%;
+    text-align: center;
 }
 
 .upload_image{
@@ -46,5 +49,21 @@
     align-items: center;
     color: white;
     position: absolute;
-    bottom: -40px;
+    bottom: 15px;
+    left: -100vw;
+    animation: slide-in 1s forwards;
+}
+
+
+@keyframes slide-in {
+    0%{
+        left: -100vw;
+    }
+
+    80%{
+        left: 20vw;
+    }
+    100%{
+        left: unset;
+    }
 }
