--- a/src/Shared Components/Image_upload/Image_upload.module.css
+++ b/src/Shared Components/Image_upload/Image_upload.module.css
@@ -41,19 +41,25 @@
     text-align: center;
 }
 
-.upload_image{
+.upload_button, .change_button{
     height: 30px;
-    width: 120px;
+    width: 85px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    position: absolute;
-    bottom: 15px;
-    left: -100vw;
     animation: slide-in 1s forwards;
 }
 
+.button_container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+    justify-content: space-evenly;
+
+}
 
 @keyframes slide-in {
     0%{
