Photo upload Added full photo upload with instant display using firebase Once uploaded successfully, an action is dispatched which reloads the book with the new photo Everytime a book is loaded, the photo is fetched from firebase

--- a/src/Pages/Form_wrapper/Components/Search_result/Search_result.module.css
+++ b/src/Pages/Form_wrapper/Components/Search_result/Search_result.module.css
@@ -36,7 +36,14 @@
     display: flex;
     height: 230px;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+}
+
+.uploaded_image {
+    max-height: 220px;
+    margin-top: 10px;
+    max-width: 280px;
+    object-fit: cover;
 }
 
 .options_container {
