--- a/src/Pages/Form_wrapper/Components/Button/Button.module.css
+++ b/src/Pages/Form_wrapper/Components/Button/Button.module.css
@@ -9,6 +9,10 @@
     font-weight: 500;
 }
 
+.container:hover{
+    cursor: pointer;
+    transform: scale(1.02);
+}
 /* Small portrait tablet */
 
 @media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px){
