--- a/src/Pages/Form_wrapper/Components/Search_result/Search_result.module.css
+++ b/src/Pages/Form_wrapper/Components/Search_result/Search_result.module.css
@@ -73,6 +73,11 @@
     height: 40px;
 }
 
+.icon:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
 .text{
     margin-top: 5px;
     font-size: 0.7rem;
