--- a/src/Shared Components/Options_bar/Options_bar.module.css
+++ b/src/Shared Components/Options_bar/Options_bar.module.css
@@ -9,6 +9,13 @@
     bottom: 2vh;
 }
 
+.inner_container{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 @media (orientation:landscape){
 
     .container{
@@ -23,19 +30,30 @@
 @media (min-width: 1200px) {
 
 .container{
-    width: 75%;
+    width: 100%;
+    background-color: #F8F8FF;
 }
 
 .container{
     position: fixed;
+    bottom: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 0;
 }
+
+.inner_container{
+    width: 50%;
+}
+
+
 }
 
 /*large desktop */
 
 @media (min-width: 1500px) {
 
-    .container{
-        width: 60%;
-    }
+
 }
