--- a/src/Pages/Form_wrapper/Desktop_add/Desktop_add.module.css
+++ b/src/Pages/Form_wrapper/Desktop_add/Desktop_add.module.css
@@ -34,15 +34,16 @@
 .form_input{
     outline: none;
     height: 30px;
-    width: 210px;
+    width: 100px;
     margin-top: 60px;
     border: none;
     background-color: transparent;
     border-bottom: 1.5px solid;
-    font-size: 25px;
+    font-size: 20px;
     padding-bottom: 1px;
     text-align: start;
     padding-bottom: 5px;
+    text-align: center;
 
 }
 
