--- a/src/Pages/Form_wrapper/Desktop_add/Desktop_add.module.css
+++ b/src/Pages/Form_wrapper/Desktop_add/Desktop_add.module.css
@@ -1,41 +1,35 @@
-.container {
-    width: 100%;
-    height: 100%;
-    background-image: url("../../../Assets/Backgrounds/add_book.svg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    animation: slide-left 0.5s forwards;
-    position: fixed;
-    right: -50vw;
-}
+/* portrait phone*/
 
-.form_container {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    margin-top: 40px;
-    margin-left: 75px;
-}
+@media (max-width:1200px) {
 
-.title {
-    font-size: 40px;
-    font-family: 'Roboto', sans-serif;
-    margin-left: 0px;
-    margin-bottom: 40px;
-}
+    .container {
+        width: 100%;
+        height: 100%;
+        animation: slide-left 0.5s forwards;
+        position: fixed;
+        right: -50vw;
+    }
+    .form_container {
+        height: 300px;
+        font-family: 'Roboto', sans-serif;
+        margin-left: 20px;
+        display: flex;
+        flex-direction: column;
+    }
+    .title {
+        font-size: 28px;
+    }
 
-.form_message {
-    font-size: 30px;
-    font-weight: 900;
-    font-family: 'Roboto', sans-serif;
-}
+    .form_message {
+        font-size: 22px;
+    }
 
-.form_input::placeholder {
-    color: rgba(0, 0, 0, 0.384);
-}
+    .button_container {
 
-.button_container {
-    display: flex;
+        display: flex;
+        margin-top: 10px;
+    }
+
 }
 
 @keyframes slide-left {
@@ -46,3 +40,87 @@
         right: 0vw;
     }
 }
+
+/* landscape */
+
+@media (orientation:landscape) {}
+
+/* long landscape mobile */
+
+@media (orientation:landscape) and (min-width:700px) {
+    @supports (-webkit-touch-callout: none) {}
+}
+
+/* Small portrait tablet */
+
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {}
+
+/* Small landscape tablet */
+
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {}
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px) {
+    @supports (-webkit-touch-callout: none) {}
+}
+
+/* medium landscape tablet */
+
+@media (min-height:500px) and (min-width: 1000px) {
+    @supports (-webkit-touch-callout: none) {}
+}
+
+/* large portrait tablet */
+
+@media (min-height:1200px) and (min-width: 1000px) {}
+
+/* large landscape tablet */
+
+@media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
+    @supports (-webkit-touch-callout: none) {}
+}
+
+/*Standard desktop */
+
+@media (min-width: 1200px) {
+    .container {
+        width: 100%;
+        height: 100%;
+        background-image: url("../../../Assets/Backgrounds/add_book.svg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        animation: slide-left 0.5s forwards;
+        position: fixed;
+        right: -50vw;
+    }
+    .form_container {
+        display: flex;
+        flex-direction: column;
+        width: 400px;
+        margin-top: 40px;
+        margin-left: 75px;
+        height: unset;
+    }
+    .title {
+        font-size: 40px;
+        font-family: 'Roboto', sans-serif;
+        margin-left: 0px;
+        margin-bottom: 40px;
+    }
+    .form_message {
+        font-size: 30px;
+        font-weight: 900;
+        font-family: 'Roboto', sans-serif;
+    }
+    .form_input::placeholder {
+        color: rgba(0, 0, 0, 0.384);
+    }
+    .button_container {
+        display: flex;
+    }
+}
+
+/*large desktop */
+
+@media (min-width: 1500px) {}
