--- a/src/Shared Components/Image_upload/Image_upload.module.css
+++ b/src/Shared Components/Image_upload/Image_upload.module.css
@@ -1,3 +1,107 @@
+@media (max-width:1200px) {
+
+    .container{
+
+        width: 225px;
+        height: 350px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        margin-top: 20px;
+        background-color: #f8f8f8;
+        padding-top: 30px;
+        
+    }
+    
+    .icon_container{
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    
+    .icon{
+        width: 65px;
+        height: 65px;
+        margin-left: 7px;
+        margin-top: -25px;
+    }
+    
+    .choose_file_container{
+        width: 175px;
+        height: 135px;
+        position: absolute;
+        border: 0.5px solid rgba(0, 0, 0, 0.192);
+        right: 50px;
+    }
+    
+    .chosen_photo_container{
+        position: absolute;
+        top: 64%;
+        width: 100%;
+        text-align: center;
+    }
+    
+    .chosen_photo_name{
+        font-size: 12px;
+    }
+
+    .upload_button, .change_button{
+        height: 30px;
+        width: 85px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        animation: slide-in 1s forwards;
+    }
+    
+    .button_container{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        position: absolute;
+        bottom: -35px;
+        justify-content: space-evenly;
+    
+    }
+    
+    .preview_img{
+        height: 83px;
+        width: 175px;
+        margin-bottom: 53px;
+    }
+    
+    .upload_button{
+        border-radius: 5px;
+    }
+    
+    .upload_button:hover{
+        cursor: pointer;
+    }
+    
+    @keyframes slide-in {
+        0%{
+            left: -100vw;
+        }
+    
+        80%{
+            left: 20vw;
+        }
+        100%{
+            left: unset;
+        }
+    }
+
+    
+}
+
+@media (min-width:1200px) {
+
 .container{
 
     width: 225px;
@@ -86,4 +190,6 @@
     100%{
         left: unset;
     }
+}
+
 }
