--- a/src/Shared Components/Image_upload_/Image_upload.module.css
+++ b/src/Shared Components/Image_upload_/Image_upload.module.css
@@ -12,10 +12,18 @@
     margin-left: 10px;
 }
 
+.successful_upload_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
 .icon {
     width: 50px;
     height: 50px;
-    margin-top: 30px;
+    margin-top: 35px;
 }
 
 .preview_img{
@@ -48,7 +56,7 @@
     justify-content: space-evenly;
 }
 
-.upload_button, .change_button{
+.upload_button, .change_button, .revert_button{
     height: 25px;
     width: 65px;
     display: flex;
@@ -61,10 +69,21 @@
     z-index: 999;
 }
 
-.change_button:hover, .upload_button:hover{
+.change_button:hover, .upload_button:hover, .revert_button:hover{
 
     cursor: pointer;
 
+}
+
+.revert_button{
+    width: 115px;
+    margin-top: 4px;
+}
+
+.uploaded_image{
+    width:100%;
+    height: 68%;
+    object-fit: contain;
 }
 
 @keyframes slide-in {
@@ -83,7 +102,10 @@
 @media (min-width:1200px){
 
     .container {
-        transform: scale(1.1);
+        transform: scale(1.2);
+        margin-top: 50px;
+        margin-bottom: 10px;
+        margin-left: 20px;
     }
 
 }
