--- a/src/Pages/Form/Components/Condition_Select/Condition/Condition.module.css
+++ b/src/Pages/Form/Components/Condition_Select/Condition/Condition.module.css
@@ -53,3 +53,51 @@
     }
 
 }
+
+/* Small portrait tablet */
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+
+    .container{
+        transform: scale(1.3);
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+
+}
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px) {
+
+    .container{
+        transform: scale(1.3);
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+    
+    @supports (-webkit-touch-callout: none) {
+        .container{
+            transform: scale(1.4);
+        }
+
+    }
+}
+
+/* medium landscape tablet */
+@media (min-height:500px) and (min-width: 1000px) {
+
+    .container{
+        transform: scale(1.2);
+        margin-left: 20px;
+        margin-top: 10px;
+    }
+    
+}
+
+@media (min-width: 1200px) {
+
+    .container{
+        margin-left: 5px;
+        transform: scale(1.1);
+    }
+}
