--- a/src/Pages/Form/Components/Condition_Select/Condition_Select.module.css
+++ b/src/Pages/Form/Components/Condition_Select/Condition_Select.module.css
@@ -3,8 +3,49 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    height: 180px;
     position: relative;
     top: 30px;
     width: 280px;
+    margin-bottom: 15px;
 }
+
+
+/* Small portrait tablet */
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+
+    .container{
+        margin-bottom: 20px;
+    }
+
+}
+
+/* Small landscape tablet */
+
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {
+
+    .container{
+        margin-bottom: 20px;
+    }
+}
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px) {
+
+    .container{
+        margin-bottom: 20px;
+    }
+    
+    @supports (-webkit-touch-callout: none) {
+
+    }
+}
+
+@media (min-height:500px) and (min-width: 1000px) {
+
+    .container{
+        margin-bottom: 20px;
+    }
+
+}
+
