--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -67,37 +67,136 @@
 
 /* Small portrait tablet */
 
-@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {}
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+
+    .title{
+        font-size: 50px;
+        margin: 0;
+    }
+
+    .form_message{
+        font-size: 40px;
+        margin-top: 15px;
+    }
+
+    .form_container{
+        margin-top: 40px;
+    }
+
+}
 
 /* Small landscape tablet */
 
-@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {}
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {
+
+    .container{
+        background-image: url("../../Assets/Backgrounds/add_book.svg");
+    }
+
+    .form_container{
+        margin-top: 20px;
+    }
+
+    .year_container{
+        display: none;
+    }
+
+    .title{
+        font-size: 40px;
+        margin: 0;
+    }
+
+    .form_message{
+        margin-top: 15px;
+        font-size: 30px;
+    }
+}
 
 /* medium portrait tablet */
 
 @media (min-height:800px) and (min-width: 701px) {
-    @supports (-webkit-touch-callout: none) {}
+
+    .title{
+        font-size: 60px;
+        margin: 0;
+        padding: 0;
+    }
+
+    .form_message{
+        font-size: 45px;
+        margin-top: 20px;
+    }
+
+    .form_container{
+        margin-top: 40px;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+
+    }
 }
 
 /* medium landscape tablet */
 
 @media (min-height:500px) and (min-width: 1000px) {
-    @supports (-webkit-touch-callout: none) {}
+
+    .container{
+        background-image: url("../../Assets/Backgrounds/add_book.svg");
+    }
+
+    .form_container{
+        margin-top: 20px;
+    }
+
+    .year_container{
+        display: none;
+    }
+
+    .title{
+        font-size: 60px;
+        margin: 0;
+        padding: 0;
+    }
+
+    .form_message{
+        font-size: 45px;
+        margin-top: 20px;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+
+        .year_container{
+            display: block;
+        }
+
+    }
 }
 
 /* large portrait tablet */
 
-@media (min-height:1200px) and (min-width: 1000px) {}
+@media (min-height:1200px) and (min-width: 1000px) and (max-width: 1200px) {
+
+    .container{
+        background-image: url("../../Assets/Backgrounds/long_mobile_add_book.svg");
+    }
+
+    .form_container{
+        margin-top: 50px;
+    }
+
+}
 
 /* large landscape tablet */
 
 @media (min-width:1366px) and (max-width:1366px) and (min-height:954px) and (max-height:954px) {
+
     @supports (-webkit-touch-callout: none) {}
 }
 
 /*Standard desktop */
 
 @media (min-width: 1200px) {
+
     .container {
         width: 100%;
         height: 100%;
@@ -107,8 +206,10 @@
         animation: slide-left 0.5s forwards;
         position: fixed;
         right: -50vw;
+        display: flex;
  
     }
+
     .form_container {
         display: flex;
         flex-direction: column;
@@ -121,7 +222,6 @@
         font-size: 40px;
         font-family: 'Roboto', sans-serif;
         margin-left: 0px;
-        margin-bottom: 40px;
     }
     .form_message {
         font-size: 30px;
@@ -136,12 +236,13 @@
     }
 }
 
-/*large desktop */
+/*Standard desktop */
 
-@media (min-width: 1500px) {
+@media (min-height: 900px) {
 
     .form_container{
         margin-top: 150px;
         margin-left: 100px;
     }
+
 }
