--- a/src/Shared Components/Image_upload_/Image_upload.module.css
+++ b/src/Shared Components/Image_upload_/Image_upload.module.css
@@ -99,6 +99,66 @@
     }
 }
 
+/* Small portrait tablet */
+@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+
+    .container{
+        transform: scale(1.1);
+        border: 0.5px solid rgba(0, 0, 0, 0.192);
+    }
+
+}
+
+/* Small landscape tablet */
+
+@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {
+
+    .container{
+        transform: scale(1.1);
+        border: 0.5px solid rgba(0, 0, 0, 0.192);
+    }
+    
+}
+
+/* medium portrait tablet */
+@media (min-height:800px) and (min-width: 701px) {
+
+    .container{
+        transform: scale(1.1);
+        border: 0.5px solid rgba(0, 0, 0, 0.192);
+    }
+
+    
+    @supports (-webkit-touch-callout: none) {
+
+        .container{
+            transform: scale(1.2);
+            margin: 20px;
+            margin-top: 40px;
+        }
+
+    }
+}
+/* medium landscape tablet */
+@media (min-height:500px) and (min-width: 1000px) {
+
+    .container{
+        transform: scale(1.1);
+        border: 0.5px solid rgba(0, 0, 0, 0.192);
+    }
+        
+    @supports (-webkit-touch-callout: none) {
+
+        .container{
+            transform: scale(1.2);
+            margin: 20px;
+            margin-top: 40px;
+        }
+
+    }
+}
+
+
 @media (min-width:1200px){
 
     .container {
