Dynamic background image Added additional stylesheet to apply many different background images depending on size

--- a/src/Pages/Form/Components/Button/Button.module.css
+++ b/src/Pages/Form/Components/Button/Button.module.css
@@ -105,3 +105,12 @@
     }
     100%{opacity: 1;}
 }
+
+/* large landscape tablet */
+
+@media (width:1366px) and (height:954px){
+
+    .button{
+        font-size: 17px;
+    }
+}
