--- a/src/Pages/Form/Components/Input/Input.module.css
+++ b/src/Pages/Form/Components/Input/Input.module.css
@@ -2,10 +2,10 @@
 @media (max-width:1200px) {
 
     .form_input{
-        margin-top: 40px;
+        margin-top: 20px;
         outline: none;
         height: 30px;
-        width: 105px;
+        width: 95px;
         background-color: transparent;
         border: none;
         border-bottom: 1.5px solid;
@@ -49,7 +49,7 @@
         outline: none;
         height: 30px;
         width: 105px;
-        margin-top: 60px;
+        margin-top: 30px;
         border: none;
         background-color: transparent;
         border-bottom: 1.5px solid;
@@ -62,4 +62,12 @@
         font-family: 'Roboto', sans-serif;
     }
 
+}
+/* large landscape tablet */
+
+@media (width:1366px) and (height:954px){
+
+ .form_input{
+     margin-top: 20px;
+ }
 }
