--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -1,5 +1,4 @@
 /* portrait phone*/
-
 @media (max-width:1200px) {
 
     .container {
@@ -8,8 +7,6 @@
         animation: slide-left 0.5s forwards;
         position: fixed;
         right: -50vw;
-        background-image: url("../../Assets/Backgrounds/mobile_add_book.svg");
-        background-size: cover;
     }
 
     .form_container {
@@ -22,11 +19,12 @@
     .title {
         font-size: 28px;
         font-weight: 900;
+        margin: 0;
     }
 
     .form_message {
         font-size: 23px;
-        margin-top: -30px;
+        margin-top: 20px;
     }
 
     .button_container {
@@ -35,6 +33,12 @@
         margin-top: -5px;
     }
 
+}
+
+.dimensions{
+    position: fixed;
+    right: 0;
+    top: 0;
 }
 
 @keyframes slide-left {
@@ -47,43 +51,8 @@
 
 }
 
-@media (min-height: 550px){
-
-    .container{
-        background-image: url("../../Assets/Backgrounds/long_mobile_add_book.svg");
-    }
-
-}
-
-@media (min-height: 750px){
-
-    .container{
-        background-image: url("../../Assets/Backgrounds/portrait_tablet_add_book.svg");
-    }
-
-}
-
-@media (min-height:400px) and (min-width: 900px){
-
-    .container{
-        background-image: url("../../Assets/Backgrounds/landscape_tablet_add_book.svg");
-    }
-
-}
-
-/* landscape */
-
-@media (orientation:landscape) {}
-
-/* long landscape mobile */
-
-@media (orientation:landscape) and (min-width:700px) {
-    @supports (-webkit-touch-callout: none) {}
-}
-
 /* Small portrait tablet */
-
-@media (min-height:750px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+@media (min-height:700px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
 
     .title{
         font-size: 50px;
@@ -96,22 +65,18 @@
     }
 
     .form_container{
-        margin-top: 40px;
+        margin-top: 30px;
     }
 
 }
 
 /* Small landscape tablet */
-
-@media (min-height:400px) and (min-width: 900px) and (max-height: 600px) and (max-width: 1023px) {
+@media (min-height:400px) and (min-width: 800px) and (max-height: 600px) and (max-width: 1023px) {
 
     .form_container{
         margin-top: 20px;
     }
 
-    .year_container{
-        display: none;
-    }
 
     .title{
         font-size: 40px;
@@ -125,8 +90,7 @@
 }
 
 /* medium portrait tablet */
-
-@media (min-height:800px) and (min-width: 701px) {
+@media (min-height:700px) and (min-width: 500px) and (max-height: 1050px) and (max-width: 800px) {
 
     .title{
         font-size: 60px;
@@ -145,23 +109,14 @@
 
     @supports (-webkit-touch-callout: none) {
 
-        .container{
-            background-image: url("../../Assets/Backgrounds/portrait_ipad_add_book.svg");
-        }
-
     }
 }
 
 /* medium landscape tablet */
-
-@media (min-height:500px) and (min-width: 1000px) {
+@media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
 
     .form_container{
         margin-top: 20px;
-    }
-
-    .year_container{
-        display: none;
     }
 
     .title{
@@ -177,52 +132,53 @@
 
     @supports (-webkit-touch-callout: none) {
 
-        .year_container{
-            display: block;
-        }
 
-        .container{
-            background-image: url("../../Assets/Backgrounds/landscape_ipad_add_book.svg");
-        }
     }
 }
 
 /* large portrait tablet */
 
-@media (min-height:1200px) and (min-width: 1000px) and (max-width: 1200px) {
+@media (min-height:1200px) and (min-width: 1000px) and (max-width: 1199px) {
 
-    .container{
-        background-image: url("../../Assets/Backgrounds/portrait_ipad_add_book.svg");
-    }
 
     .form_container{
         margin-top: 50px;
     }
 
+    .title{
+        font-size: 50px;
+        margin: 0;
+    }
+
+    .form_message{
+        font-size: 40px;
+        margin-top: 15px;
+    }
+
+    .form_container{
+        margin-top: 250px;
+        margin-left: 100px;
+    }
+
 }
 
 /*Standard desktop */
-
 @media (min-width: 1200px) {
 
     .container {
         width: 100%;
         height: 100%;
-        background-image: url("../../Assets/Backgrounds/add_book.svg");
-        background-size: cover;
-        background-repeat: no-repeat;
         animation: slide-left 0.5s forwards;
         position: fixed;
         right: -50vw;
         display: flex;
- 
     }
 
     .form_container {
         display: flex;
         flex-direction: column;
         width: 400px;
-        margin-top: 40px;
+        margin-top: 80px;
         margin-left: 75px;
         height: unset;
     }
@@ -230,11 +186,13 @@
         font-size: 40px;
         font-family: 'Roboto', sans-serif;
         margin-left: 0px;
+        margin: 0;
     }
     .form_message {
         font-size: 30px;
         font-weight: 900;
         font-family: 'Roboto', sans-serif;
+        margin-top: 15px;
     }
     .form_input::placeholder {
         color: rgba(0, 0, 0, 0.384);
@@ -258,7 +216,18 @@
 
 @media (width:1366px) and (height:954px){
 
-    .container{
-        background-image: url("../../Assets/Backgrounds/landscape_ipad_large_add_book.svg");
+
+    .title{
+        margin: 0;
+    }
+
+    .form_message{
+        margin-top: 20px;
+    }
+
+    .form_container{
+        margin-left: 200px;
+        margin-top: 200px;
+        width: 800px;
     }
 }
