--- a/src/Pages/Form/Components/Search/Search.module.css
+++ b/src/Pages/Form/Components/Search/Search.module.css
@@ -26,16 +26,16 @@
     justify-content: center;
     align-items: center;
     height: 262.5px;
-    background-color: #f8f8ff;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     z-index: 2;
 }
 
 .image {
-    width: 100%;
+    max-width: 90%;
+    max-height: 90%;
     height: 262.5px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .details_container {
@@ -72,26 +72,12 @@
     box-shadow: 2px 2px 4px 2px rgba(128, 128, 128, 0.534);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
- 
     z-index: 1;
     transition: right .5s
 }
 
 .nav_open {
     right: -55px;
-}
-
-@keyframes slideIn {
-    0% {
-        right: 55px;
-    }
-
-    80%{
-        right: 55px;
-    }
-    100% {
-        right: -55px;
-    }
 }
 
 .cog {
