Redirect from book and fixes to deleting books => redirect from missing book now prefils the add book form with the given year => Deleting a book now works and doesn't crash the app

--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -225,6 +225,13 @@
 
 }
 
+@media (min-height: 900px) and (min-width:1500px) {
+
+    .book_container{
+        margin-left: 200px;
+    }
+}
+
 /* large landscape tablet */
 
 @media (width:1366px) and (height:954px){
