--- a/src/Pages/Dashboard/Components/Bar_chart/Bar_chart.module.css
+++ b/src/Pages/Dashboard/Components/Bar_chart/Bar_chart.module.css
@@ -1,10 +1,11 @@
 .chart_wrapper {
 
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    margin-top: 60px;
+    text-align: center;
 }
 
 .left_patch, .right_patch {
@@ -43,3 +44,90 @@
     position: absolute;
     top: 280px;
 }
+
+.title{
+    position: fixed;
+    top: 52px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 25px;
+    text-align: center;
+    width: 100%;
+    left: 5px;
+}
+
+@media (orientation:landscape) {
+
+    .chart_wrapper{
+        width: 500px;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 70px;
+
+    }
+
+    .card_container{
+        margin-top: 50px;
+    }
+
+    
+.left_patch, .right_patch, .key_patch {
+
+    position: absolute;
+    bottom: 23px;
+}
+
+.title{
+    position: absolute;
+    top: -16px;
+    left: -80px;
+}
+
+}
+
+/* medium portrait tablet */
+
+@media (min-height:800px) and (min-width: 701px) and (max-width: 1100px) {
+
+    .chart_wrapper{
+        width: 500px;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 120px;
+    }
+
+    .card_container{
+        margin-top: 50px;
+    }
+
+    
+.left_patch, .right_patch, .key_patch {
+
+    position: absolute;
+    bottom: 23px;
+   
+}
+
+.title{
+    position: absolute;
+    top: -15px;
+    left: -80px;
+}
+
+
+    @supports (-webkit-touch-callout: none) {
+
+        .title{
+
+            top: -25px;
+        }
+    }
+}
+
+/*Standard desktop */
