Finished the application => added a tutorial for first time users => changed 'Go back' to 'Add another'

--- a/src/Pages/Dashboard/Components/Bar_chart/Bar_chart.module.css
+++ b/src/Pages/Dashboard/Components/Bar_chart/Bar_chart.module.css
@@ -131,3 +131,13 @@
 }
 
 /*Standard desktop */
+
+@media (min-width: 1200px) {
+
+    .left_patch, .right_patch, .key_patch {
+
+        bottom: 22px;
+       
+    }
+
+}
