--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -1,3 +1,11 @@
+.click_prevent_overlay{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 /* portrait phone*/
 @media (max-width:1200px) {
 
@@ -295,6 +303,8 @@
         cursor: pointer;
     }
 }
+
+
 
 /*large  */
 @media (min-height: 900px) and (min-width:1200px) {
