--- a/src/Shared Components/Options_bar/Options_bar.module.css
+++ b/src/Shared Components/Options_bar/Options_bar.module.css
@@ -59,6 +59,44 @@
     height: 22px;
 }
 
+.animated{
+
+    animation: pulse 0.5s infinite forwards;
+    animation-delay: 10s;
+    opacity: 0;
+
+}
+
+.animated_no_delay{
+
+    animation: pulse 0.5s infinite;
+}
+
+.animated_no_delay_small{
+
+    animation: pulse_small 0.5s infinite;
+
+}
+
+@keyframes pulse {
+
+    0%{transform: scale(1);
+    opacity: 1;}
+    50%{transform: scale(1.5);
+        opacity: 1;}
+    100%{transform: scale(1);
+        opacity: 1;}
+
+}
+
+@keyframes pulse_small {
+
+    0%{transform: scale(1);}
+    50%{transform: scale(1.15);}
+    100%{transform: scale(1);}
+
+}
+
 .overlay{
     height: 100%;
     width: 100%;
