--- a/src/Pages/Dashboard/Components/Donut/Components/Condition_card/Condition_card.module.css
+++ b/src/Pages/Dashboard/Components/Donut/Components/Condition_card/Condition_card.module.css
@@ -1,16 +1,16 @@
 .container {
-    width: 87px;
-    height: 45px;
+    width: 26%;
     border-radius: 5px;
-    box-shadow: 1px 1px 3px 1px #d3d3d3;
+    box-shadow: 2px 2px 3px 2px #d3d3d3;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-around;
     position: relative;
-    background-color: whitesmoke;
     color: white;
     margin-top: 8px;
+    padding: 10px 5px;
+    flex-direction: row;
+
 }
 
 .title {
