--- a/src/Pages/Dashboard/Components/Donut/Donut.module.css
+++ b/src/Pages/Dashboard/Components/Donut/Donut.module.css
@@ -63,7 +63,7 @@
 
 @media (orientation:landscape) {
     .chart_wrapper {
-        width: 500px;
+        width: 100%;
         height: 400px;
         display: flex;
         flex-direction: column;
@@ -92,7 +92,6 @@
 
 @media (min-height:800px) and (min-width: 701px) and (max-width: 1100px) {
     .chart_wrapper {
-        width: 500px;
         height: 400px;
         display: flex;
         flex-direction: column;
@@ -127,7 +126,7 @@
 
 @media (orientation:landscape) {
     .chart_wrapper {
-        width: 500px;
+        width: 100%;
         height: 400px;
         display: flex;
         flex-direction: column;
