--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -47,11 +47,19 @@
     left: 0;
 }
 
+@media (min-width:500px){
+
+    .mobile_chart_container{
+        width: 100%;
+    }
+
+}
+
 
 
 /* landscape */
 
-@media (orientation:landscape) {
+/* @media (orientation:landscape) {
     .mobile_icon_container {
         display: none;
     }
@@ -64,11 +72,11 @@
         height: 100%;
         justify-content: space-evenly;
     }
-}
+} */
 
 
-@media (min-height:800px) and (min-width: 701px) and (max-width: 1100px) {
-    .mobile_chart_container {
+/* @media (min-height:800px) and (min-width: 701px) and (max-width: 1100px) { */
+    /* .mobile_chart_container {
         display: none;
     }
     .landscape_chart_container {
@@ -80,20 +88,20 @@
     .mobile_icon_container {
         display: none;
     }
-}
+} */
 
 /* medium landscape tablet */
-
+/* 
 @media (min-height:500px) and (min-width: 1000px) {
     .landscape_chart_container {
         margin-top: 10vh;
     }
-}
+} */
 
 
 /*Standard desktop */
 
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
 
     .mobile_icon_container {
         display: none;
@@ -108,4 +116,4 @@
         justify-content: space-evenly;
     }
 
-}
+} */
