--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -107,7 +107,9 @@
     font-size: 18px;
     border-radius: 5px;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
+
 .go_back_button:hover {
     cursor: pointer;
 }
